--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.24.7",
+    "debounce": "^2.2.0",
+    "lodash.debounce": "^4.0.8",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
